# hometown_analysis

./: .gitignore  02-geographic-stability.ipynb  03-table-selection-and-ingestion.ipynb  03-tables.ipynb  04-analyzing-trends.ipynb  04-multi-year-data.ipynb  04-time-series-template.ipynb  05-nativity.ipynb  06-place-of-birth.ipynb  07-race.ipynb  08-china-breakdown.ipynb  DEVELOPER.md  LICENSE  README.md  pyproject.toml  todo.txt  utils.py
