[project]
name = "hometown-analysis"
version = "0.1.0"
description = "An attempt to understand how the demographics of my hometown have changed during my lifetime."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black[jupyter]>=24.10.0",
    "censusdis>=1.3.0",
    "ipykernel>=6.29.5",
    "jupyter-core>=5.7.2",
]
